ADDRLIB ODR Violation
I saw one of these get fixed up today, but this still remains:
../mesa-9999/src/amd/addrlib/src/chip/gfx10/gfx10_gb_reg.h:48:7: warning: type ‘union GB_ADDR_CONFIG’ violates the C++ One Definition Rule [-Wodr]
48 | union GB_ADDR_CONFIG
| ^
../mesa-9999/src/amd/addrlib/src/chip/r800/si_gb_reg.h:102:3: note: a different type is defined in another translation unit
102 | } GB_ADDR_CONFIG;
| ^
../mesa-9999/src/amd/addrlib/src/chip/gfx10/gfx10_gb_reg.h:65:7: note: the first difference of corresponding definitions is field ‘bitfields’
65 | } bitfields, bits;
| ^
../mesa-9999/src/amd/addrlib/src/chip/r800/si_gb_reg.h:100:19: note: a field with different name is defined in another translation unit
100 | unsigned int val : 32;
|
The line number correspond to the following commits:
78cdf9a9 (Marek Olšák 2019-06-19 20:42:18 -0400 48) 7f33e94e (Marek Olšák 2017-11-07 00:56:13 +0100 42) e7fc664b (Marek Olšák 2015-04-16 19:41:33 +0200 100)